
===================
Restlet changes log  
===================

@version-full@ (@release-date@)
 - Added static Reference.toUri() method to construct an URI string from its parts. Better than doing: new Reference(parts...).toString().
 - Fixed bug in SimpleCall forgetting to add the port number in the request URIs.
 - Optimized response time of the Simple HTTP server connector. Suggested by Niall Gallagher.
 - Added DefaultBuilder.upMaplet() and upMaplet(level) to go up to parent Maplet builders without the need to count non Maplet builders 
   and having to cast.
 - Added new RestletContainerBuilder constructor taking an existing RestletContainer instance.
 - Added empty RestletContainer constructor in case the name is never used.
 - Added HostMapletBuilder to facilitate the fluent configuration of Host Maplets.
 - Added a build.properties file containing the machine specific directories in order to have a universal build.xml Ant file. Suggested by Lars Heuer.
 - Added new attachHost(domain) method to ChainletBuilder, MapletBuilder and RestletContainerBuilder (refactored other attachHost() methods too).
 - Added "redirectStatus" property to HostMaplet.
 - Added a DOAP description for the Restlet project: http://www.restlet.org/docs/doap
 - Added RDF (APPLICATION_RESOURCE_DESCRIPTION_FRAMEWORK) to org.restlet.data.MediaTypes.
 - Added MapModel.remove() method.
 - Added DirectoryRestlet.addCommonExtensions() method to add common language and media type mappings to file extensions.
 - Added new parameter to DirectoryRestlet constructor to add common extensions.
 - Simplified tutorial examples based on the new addCommonExtensions() method.
 - Fixed bug in HostMaplet causing NPE when redirection to preferred URI was enabled.
 - Greatly simplified the sample application (http://www.restlet.org/sample) by using fluent builders.